# data-centric-deep-learning

./: .gitignore  environment.yml  pyproject.toml
course/week2/pipeline_project/configs/: directionality_flow.json  integration_flow.json  regression_flow.json  train_flow.json
course/week2/pipeline_project/flows/: hparam_flow.py  integration_flow.py  regression_flow.py  train_flow.py
course/week2/pipeline_project/src/tests/: regression.py
course/week2/pipeline_project/src/tests/images/regression/: test-data.pt
course/week3/celery_project/: api.py  tasks.py
course/week3/conflearn_project/: flow_conflearn.py
course/week3/fastapi_project/: api.py  copy_ckpt.sh
course/week4/monitor_project/: jtt_flow.py  monitor.py
course/week4/monitor_project/src/: dataset.py  monitor.py  systems.py
