[tool.poetry]
name = "data-centric-deep-learning"
version = "0.1.0"
description = ""
authors = ["Amardeep Singh <amardeeps@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
celery = "^5.2.7"
cleanlab = "^2.0.0"
dotmap = "^1.3.30"
fastapi = "^0.78.0"
jsonlines = "^3.0.0"
matplotlib = "^3.5.2"
metaflow = "^2.6.3"
numpy = "^1.22.4"
opencv-python = "^4.6.0"
pandas = "^1.4.2"
plotly = "^5.8.1"
Pillow = "^9.1.1"
pytest = "^7.1.2"
pytorch-lightning = "^1.6.4"
scikit-image = "^0.19.2"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
transformers = "^4.19.3"
torch = "^1.11.0"
torchmetrics = "^0.9.1"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
wandb = "^0.12.18"
rich = "^12.4.4"
gdown = "^4.4.0"
redis = "^4.3.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.1"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
